--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -2,17 +2,17 @@
   <mat-step [stepControl]="firstFormGroup">
     <form [formGroup]="firstFormGroup">
       <!-- 1 Personal Details -->
-	    <ng-template matStepLabel>Personal Deatils</ng-template>
+	    <ng-template matStepLabel>Personal Details</ng-template>
 	  <mat-form-field class="input-full-width">
-      <input matInput placeholder="Last name, First name" formControlName="firstCtrl" [(ngModel)]="userprofile.name"/>
+      <input matInput placeholder="Last name, First name" formControlName="firstCtrl" [(ngModel)]="userprofile.fullname"/>
     </mat-form-field>
 	  <br>
 	  <mat-form-field class="input-full-width">
-      <input matInput placeholder="Contact Number" formControlName="firstCtrl"class="input-full-width" [(ngModel)]="userprofile.number"/>
+      <input matInput placeholder="Contact Number" formControlName="firstCtrl"class="input-full-width" [(ngModel)]="userprofile.contactnumber"/>
     </mat-form-field>
 	  <br>
 	  <mat-form-field class="input-full-width">
-      <input matInput placeholder="Email Address" formControlName="firstCtrl" class="input-full-width" [(ngModel)]="userprofile.email"/>
+      <input matInput placeholder="Email Address" formControlName="firstCtrl" class="input-full-width" [(ngModel)]="userprofile.emailaddress"/>
     </mat-form-field>
     <br>
 	  <div>
@@ -27,7 +27,7 @@
 	    <ng-template matStepLabel>Office Details</ng-template>
       <mat-form-field class="input-full-width">
         <input type="text" placeholder="Skill Set" class="input-full-width" aria-label="Number" matInput
-        [formControl]="techControl" [matAutocomplete]="auto" matInput [(ngModel)]="userprofile.skillSet" (submit)="openDialog()">
+        [formControl]="techControl" [matAutocomplete]="auto" matInput [(ngModel)]="userprofile.primaryskillset" (submit)="openDialog()">
         <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
            <mat-option *ngFor="let option of filteredTechOptions | async" [value]="option">
               {{ option }}
@@ -37,8 +37,8 @@
     Experience : {{userprofile.experience}} years <br>
 	  <mat-slider placeholder="Experience" formControlName="secondCtrl"class="input-full-width" [(ngModel)]="userprofile.experience">
 	  </mat-slider>
-	  Salary Expectation : {{userprofile.salaryExpectation}} lakhs <br>
-	  <mat-slider placeholder="Salary Expectation" formControlName="secondCtrl" class="input-full-width" [(ngModel)]="userprofile.salaryExpectation">
+	  Salary Expectation : {{userprofile.salaryexpectation}} lakhs <br>
+	  <mat-slider placeholder="Salary Expectation" formControlName="secondCtrl" class="input-full-width" [(ngModel)]="userprofile.salaryexpectation">
     </mat-slider>
 	  <br>
     <mat-select placeholder="Current Location" [formControl]="locationControl" multiple [(ngModel)]='userprofile.location'>
@@ -50,26 +50,26 @@
     </mat-select>
   	<br>
 	<mat-form-field class="input-full-width">
-    <input matInput [matDatepicker]="picker" placeholder="Last working day" formControlName="secondCtrl" [(ngModel)]="userprofile.lastWorking">
+    <input matInput [matDatepicker]="picker" placeholder="Last working day" formControlName="secondCtrl" [(ngModel)]="userprofile.lastworkingday">
 	  <mat-datepicker-toggle matSuffix [for]="picker">
     </mat-datepicker-toggle>
 	  <mat-datepicker #picker>
     </mat-datepicker>
   </mat-form-field>
   <br>
-  Notice period : {{userprofile.noticePeriod}} days <br>
-	<mat-slider placeholder="Notice period" formControlName="secondCtrl" class="input-full-width" [(ngModel)]="userprofile.noticePeriod">
+  Notice period : {{userprofile.noticeperiod}} days <br>
+	<mat-slider placeholder="Notice period" formControlName="secondCtrl" class="input-full-width" [(ngModel)]="userprofile.noticeperiod">
 	</mat-slider>
 	<br>
 	<mat-form-field class="input-full-width">
-    <input matInput placeholder="Reference Name" formControlName="secondCtrl" class="input-full-width" [(ngModel)]="userprofile.referenceName">
+    <input matInput placeholder="Reference Name" formControlName="secondCtrl" class="input-full-width" [(ngModel)]="userprofile.referencename">
 	</mat-form-field>
 	<br>
 	<mat-form-field class="input-full-width">
-    <input matInput placeholder="Reference Number" formControlName="secondCtrl" class="input-full-width" [(ngModel)]="userprofile.referenceNumber">
+    <input matInput placeholder="Reference Number" formControlName="secondCtrl" class="input-full-width" [(ngModel)]="userprofile.referencenumber">
 	</mat-form-field>
 	<div>
-		<button mat-raised-button color="primary">Submit</button>
+		<button mat-raised-button color="primary" (click)="submitprofile()">Submit</button>
 	</div>
 </form>
 </mat-step>
