--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -4,7 +4,7 @@
   <mat-step [stepControl]="firstFormGroup">
     <form [formGroup]="firstFormGroup">
       <!-- 1 Personal Details -->
-	    <ng-template matStepLabel>Personal Details</ng-template>
+	    <ng-template matStepLabel style="font-weight: bold;">Personal Details</ng-template>
 	  <mat-form-field class="input-full-width">
       <input matInput placeholder="Last name, First name" formControlName="firstCtrl" [(ngModel)]="userprofile.fullname"/>
     </mat-form-field>
@@ -16,27 +16,16 @@
 	  <mat-form-field class="input-full-width">
       <input matInput placeholder="Email Address" formControlName="firstCtrl" class="input-full-width" [(ngModel)]="userprofile.emailaddress"/>
     </mat-form-field>
-    <br>
-	  <div>
-		  <button mat-raised-button matStepperNext color="primary">Next</button>
-	  </div>
-   </form>
-  </mat-step>
-
-  <mat-step [stepControl]="secondFormGroup">
-    <form [formGroup]="secondFormGroup">
-      <!-- 2 Office Details -->
-	    <ng-template matStepLabel>Office Details</ng-template>
-      <mat-form-field class="input-full-width">
-        <input type="text" placeholder="Skill Set" class="input-full-width" aria-label="Number" matInput
-        [formControl]="techControl" [matAutocomplete]="auto" matInput [(ngModel)]="userprofile.skillset">
-        <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
-           <mat-option *ngFor="let option of filteredTechOptions | async" [value]="option">
-              {{ option }}
-           </mat-option>
-        </mat-autocomplete>
-       </mat-form-field>
-    Experience : {{userprofile.experience}} years <br>
+    
+    <mat-select placeholder="Current Location" [formControl]="locationControl" multiple [(ngModel)]='userprofile.location'>
+      <mat-optgroup>
+        <mat-option *ngFor="let location of locationGroups" [value]="location.city">
+	        {{ location.city }}
+	      </mat-option>
+      </mat-optgroup>
+    </mat-select><br>
+    
+     Experience : {{userprofile.experience}} years <br>
 
     <ion-range-slider #sliderElement
           min="1"
@@ -45,6 +34,29 @@
           hide_min_max="true"
            hide_from_to= "true"
           (onChange)="experienceUpdate($event)"></ion-range-slider>
+   </form>
+  </mat-step>
+  
+  
+
+  <mat-step [stepControl]="secondFormGroup">
+    <form [formGroup]="secondFormGroup">
+      <!-- 2 Office Details -->
+	    <ng-template matStepLabel style="font-weight: bold;">Office Details</ng-template>
+        <mat-form-field class="input-full-width">
+  <mat-chip-list #chipList>
+    <mat-chip *ngFor="let fruit of fruits" [selectable]="selectable" [removable]="removable" (removed)="remove(fruit)">
+      {{fruit}}
+      <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+    </mat-chip>
+    <input placeholder="Job Title, Keywords" #fruitInput [formControl]="fruitCtrl" [matAutocomplete]="auto" [matChipInputFor]="chipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+      [matChipInputAddOnBlur]="addOnBlur" (matChipInputTokenEnd)="add($event)"/>
+  </mat-chip-list>
+  <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)">
+    <mat-option *ngFor="let fruit of filteredFruits | async" [value]="fruit"> {{ fruit }} </mat-option>
+  </mat-autocomplete>
+</mat-form-field>
+   
           <br>
 
 
@@ -60,13 +72,7 @@
           hide_min_max="true"
            hide_from_to= "true"
           (onChange)="salaryExpectationOnUpdate($event)"></ion-range-slider><br>
-    <mat-select placeholder="Current Location" [formControl]="locationControl" multiple [(ngModel)]='userprofile.location'>
-      <mat-optgroup>
-        <mat-option *ngFor="let location of locationGroups" [value]="location.city">
-	        {{ location.city }}
-	      </mat-option>
-      </mat-optgroup>
-    </mat-select>
+    
   	<br>
 	<mat-form-field class="input-full-width">
     <input matInput [matDatepicker]="picker" placeholder="Last working day" formControlName="secondCtrl" [(ngModel)]="userprofile.lastworkingday">
@@ -92,8 +98,9 @@
 	<mat-form-field class="input-full-width">
     <input matInput placeholder="Reference Number" formControlName="secondCtrl" class="input-full-width" [(ngModel)]="userprofile.referencenumber">
 	</mat-form-field>
-	<div>
-		<button mat-raised-button color="primary" (click)="submitprofile()">Submit</button>
+	<div class="keep-c-done-btn">
+		<mat-chip color="primary" selected="true" (click)="submitprofile()">Submit</mat-chip>
+		
 	</div>
 </form>
 </mat-step>
