--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -9,6 +9,11 @@
     <button mat-menu-item (click)="routePage('search')">
       <span>Search Jobs</span>
     </button>
-  </mat-menu>HotCake
+  </mat-menu>
+  
+  HotCake
+  <span class="example-spacer"></span>
+  <div class="example-icon"><img src="https://cdn0.iconfinder.com/data/icons/social-messaging-ui-color-shapes/128/user-male-circle-blue-512.png" width="50" height="50" ></div>
+  
 </mat-toolbar>
 
